# cryptorocket

./: .env.example  .gitignore  README.md  config.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS
.github/workflows/: ci.yml  collect-crypto-data.yml  collect-deribit-data.yml  run-backtest.yml
backtest/: commission.py  cross_validate.py  engine.py  options_estimators.py  tearsheet.py
data/: client.py  crypto.duckdb  deribit_client.py  deribit_ingest.py  ingest.py  schema.py  store.py
docs/: deribit-short-put-investigation.md
execution/: blotter.py  executor.py  order_manager.py
results/2026-03-28/: 01_naked_put_20d.txt  02_naked_call_20d.txt  03_put_spread_20d_10w.txt  04_call_spread_20d_10w.txt  05_moneyness_dte_sweep.txt  06_ps_delta_dte_grid.txt
scripts/: backfill_data.py  collect_data.py  collect_deribit.py  gh_collect.py  pull_db.sh  run_backtest.py  run_live.py  run_short_put_backtest.py  run_spread_sweep.py  trigger-collect-crypto.sh  trigger-collect-deribit.sh
strategies/: base.py
strategies/examples/: carry.py  intraday.py  liquidation_cascade.py  momentum.py  pullback_momentum.py
tests/: test_cross_validate.py  test_liquidation_cascade.py  test_options_estimators.py  test_order_manager.py  test_pullback_momentum.py  test_schema.py  test_strategy_pipeline.py  test_tearsheet.py
