[project]
name = "cryptorocket"
version = "0.1.0"
description = "Crypto trading system for Hyperliquid DEX with Moonshot-style signal pipeline"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk>=0.22,<1.0",
    "eth_account>=0.13,<1.0",
    "duckdb>=1.1,<1.3",
    "pytz>=2024.1",
    "pandas>=2.2,<3.0",
    "numpy>=1.26,<3.0",
    "matplotlib>=3.8,<4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
cr-backfill = "scripts.backfill_data:main"
cr-collect = "scripts.collect_data:main"
cr-backtest = "scripts.run_backtest:main"
cr-live = "scripts.run_live:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.setuptools.packages.find]
include = ["data*", "backtest*", "execution*", "strategies*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
